--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "json-stringify",
-  "version": "0.1.0",
-  "description": "json-stringify",
+  "version": "0.1.1",
+  "description": "Enhanced JSON.stringify",
   "main": "index.js",
   "scripts": {
     "test": "make test"
