--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-stringify",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Enhanced JSON.stringify",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,11 @@
     "url": "git://github.com/kaelzhang/json-stringify.git"
   },
   "keywords": [
-    "json-stringify"
+    "json",
+    "stringify",
+    "indent",
+    "offset",
+    "enhance"
   ],
   "engines": { 
     "node": ">=0.11.0"
